Fix z-index issues

--- a/backend/src/assets/css/agency.css
+++ b/backend/src/assets/css/agency.css
@@ -66,7 +66,7 @@ div.agency {
 
   .agency div.col-2 {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
   }
 }
 
